# oida-code

./: .gitignore  AGENTS.md  Answer.md  Answer2.md  BACKLOG.md  CLAUDE.md  CONSULTATION_OIDA.md  CONSULTATION_OIDA_RESPONSE.md  LICENSE  PHASE1_AUDIT_REPORT.md  PHASE1_REPORT.md  PHASE2_AUDIT_REPORT.md  PHASE3_AUDIT_REPORT.md  PLAN.md  README.md  action.yml  brainstorm2.md  brainstorm2_improved.md  infos.md  last.md  oida-code-audit-report.example.json  oida-code-mvp-blueprint.md  prompt.md  pyproject.toml  roadmap.md
.github/workflows/: action-gateway-smoke.yml  action-smoke.yml  ci.yml  gateway-calibration.yml  gateway-grounded-smoke.yml  operator-soak.yml  provider-baseline-node24-smoke.yml  provider-baseline.yml  sarif-upload.yml
QA/: A10.md  A11.md  A12.md  A13.md  A14.md  A15.md  A16.md  A18.md  A19.md  A20.md  A21.md  A22.md  A23.md  A24.md  A25.md  A26.md  A27.md  A28.md  A29.md  A30.md  A31.md  A32.md  A33.md  A34.md  A35.md  A36.md  A37.md  A38.md  A39.md  A4.md  A40.md  A41.md  A42.md  A43.md  A44.md  A45.md  A45_followup.md  A45_step4_outcome.md  A46.md  A47.md  (+23 more)
datasets/calibration_v1/: manifest.json
datasets/gateway_holdout_public_v1/: README.md  manifest.json
datasets/private_holdout_v1/: README.md  manifest.example.json
datasets/private_holdout_v2/: README.md  manifest.example.json
docs/: calibration_seed_authoring_checklist.md  calibration_seed_expansion_protocol.md  diagnostic_cli_quickstart.md  gateway_opt_in_usage.md  interpreting_gateway_reports.md  operator_soak_runbook.md  product_strategy.md  project_status.md
docs/beta/: README.md  beta_case_template.md  beta_feedback_form.md  beta_known_limits.md  beta_operator_quickstart.md
docs/concepts/: oida_code_plain_language.md
docs/legacy/: MOVED.md
docs/security/: mcp_admission_policy.md  mcp_audit_log_schema.md  mcp_threat_model.md  mcp_unlock_criteria.md  no_product_verdict_policy.md  tool_call_execution_model.md  tool_schema_pinning.md
examples/: audit-request.example.json  audit_report.json  audit_request.json  normalized_scenario.json
examples/gateway_opt_in/: README.md  packet.json  pass1_forward.json  pass2_backward.json  pass2_forward.json
experiments/pydantic_ai_spike/: README.md  (+2 more)
memory-bank/: activeContext.md  codexContext.md  decisionLog.md  productContext.md  progress.md  projectBrief.md  systemPatterns.md
operator_soak_cases/: README.md  RUNBOOK.md
reports/: block_d_validation.md  e0_fusion_readiness.md  e1_shadow_fusion.md  e2_shadow_formula_decision.md  e3_estimator_contracts.md  paper_sanity_report.md  phase4_0_llm_estimator_dryrun.md  phase4_1_forward_backward_contract.md  phase4_2_tool_grounded_verifier_loop.md  phase4_3_calibration_dataset_design.md  phase4_4_real_provider_binding.md  phase4_5_ci_github_action.md  phase4_6_real_runner_operator_smoke.md  phase4_7_provider_regression_baseline.md  phase4_8_provider_regression_deepening.md  phase4_9_artifact_ux_polish.md  phase5_0_mcp_tool_calling_design.md  phase5_1_local_deterministic_tool_gateway.md  phase5_2_gateway_grounded_verifier_loop.md  phase5_3_gateway_verifier_calibration.md  phase5_4_real_gateway_calibration.md  phase5_5_gateway_holdout_expansion.md  phase5_6_gateway_action_opt_in.md  phase5_7_operator_soak.md  phase5_8_prep_operator_soak_scaffolding.md  phase5_8_x_pytest_summary_line.md  phase5_9_documentation_opt_in.md  phase6_0_controlled_beta.md  phase6_1_a_first_collection.md  phase6_1_b_bundle_generator.md  phase6_1_c_corpus_expansion.md  phase6_1_close_out.md  phase6_1_close_out_v2.md  phase6_1_corpus_quality_v1.md  phase6_1_d_round_trip.md  phase6_1_e_step_4_holdouts.md  phase6_1_e_steps_1_3.md  phase6_1_f_bootstrap_corrective.md  phase6_1_g_test_extras_corrective.md  phase6_1_h_freeze_pass.md  (+4 more)
scripts/: _build_phase5_4_cases.py  _build_phase5_5_cases.py  audit_llm_replays.py  audit_provider_estimator_labels.py  baseline_fixtures.py  build_calibration_dataset.py  build_calibration_seed_index.py  check_calibration_stability.py  clone_target_at_sha.py  evaluate_shadow_formula.py  llm_author_replays.py  paper_sanity_check.py  plan_g6d_corpus_expansion.py  real_repo_shadow_smoke.py  real_repo_smoke.py  run_ai_adversarial_review.py  run_beta_feedback_eval.py  run_calibration_eval.py  run_gateway_calibration.py  run_operator_soak_eval.py  validate_github_workflows.py  validate_phase3.py
search/OIDA/oida_framework/: LICENSE_NOTE.md  README.md  pyproject.toml  run_demo.py
search/OIDA/oida_framework/examples/: destructive_db_recreate.json  repeated_low_grounding_cost_optimization.json
search/OIDA/oida_framework/oida/: cli.py  models.py
search/OIDA/oida_framework/results/: destructive_db_recreate_repair_plan.json  destructive_db_recreate_report.json  repeated_low_grounding_cost_optimization_report.json  safe_online_migration_report.json
search/OIDA/oida_framework/tests/: test_oida.py
tests/: conftest.py  test_blast_radius.py  test_block_d0_integration.py  test_block_d2_hermetic_traces.py  test_claude_code_trace.py  test_cli_audit.py  test_cli_help_windows_encoding.py  test_cli_smoke.py  test_dependency_graph.py  test_detect_commands.py  test_e0_fusion_readiness.py  test_e1_shadow_fusion.py  test_e2_shadow_formula_decision.py  test_e3_estimator_contracts.py  test_e3_evidence_plumbing.py  test_extract_obligations.py  test_hypothesis_mutmut.py  test_mapper.py  test_models_roundtrip.py  test_phase2_e2e.py  test_phase4_0_llm_estimator_dryrun.py  test_phase4_1_verifier_contract.py  test_phase4_2_tool_grounded_verifier.py  test_phase4_3_calibration.py  test_phase4_4_real_provider.py  test_phase4_5_ci_github_action.py  test_phase4_6_real_runner_smoke.py  test_phase4_7_provider_baseline.py  test_phase4_8_redacted_provider_io.py  test_phase4_8_workflow_and_docs.py  test_phase4_9_action_outputs.py  test_phase4_9_artifact_manifest.py  test_phase4_9_diagnostic_report.py  test_phase4_9_label_audit.py  test_phase4_9_step_summary_and_sarif.py  test_phase5_0_design.py  test_phase5_1_tool_gateway.py  test_phase5_2_gateway_grounded_verifier.py  test_phase5_3_gateway_calibration.py  test_phase5_4_real_calibration.py  (+38 more)
(+556 files in other folders)
