[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oida-code"
version = "0.4.2"
description = "AI code verifier: measures the gap between what AI-written code appears to do and what it actually guarantees."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Yann Abadie" }]
keywords = ["oida", "ai", "code-audit", "verification", "operational-debt", "corrupt-success"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pydantic>=2.5",
    "typer>=0.12",
    "networkx>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    # Phase 4.5.2 real-runner fix: `scripts/validate_github_workflows.py`
    # parses workflow + action YAML; without PyYAML the validator
    # exits 2 and the `security-smoke` CI job fails. PyYAML is a
    # de-facto standard install on most dev boxes, but explicit is
    # safer than implicit when CI runs from a clean container.
    "PyYAML>=6.0",
]

[project.scripts]
oida-code = "oida_code.cli:app"

[project.urls]
Homepage = "https://github.com/yannabadie/oida-code"
Repository = "https://github.com/yannabadie/oida-code"

[tool.setuptools.packages.find]
where = ["src"]
include = ["oida_code*"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Vendored OIDA core is kept verbatim per blueprint §2 (reuse, do not rewrite).
# Do not lint vendored code; touching it would diverge from upstream.
# experiments/ holds the Phase 4.8-F pydantic-ai spike — out-of-tree by design.
extend-exclude = ["src/oida_code/_vendor", "experiments"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Scripts include paper/math content where Greek letters (ρ, σ), arrows,
# and en-dashes carry meaning — ruff's ambiguous-unicode warnings are noise
# rather than signal in that context. Same for QA/ archival docs (not linted).
"scripts/*" = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.11"
strict = true
# Vendored OIDA core uses @dataclass(slots=True) and networkx without full stubs;
# keeping it verbatim per blueprint §2. Exclude it from strict type checking.
exclude = [
    "src/oida_code/_vendor/",
    # Phase 4.3 calibration dataset: each `code_outcome` case ships
    # its own ``repo/src/`` mini-project for F2P/P2P stability runs.
    # mypy's package discovery would treat them as duplicate ``src``
    # modules; the calibration runner exercises them via a separate
    # subprocess pytest invocation, not via the project mypy gate.
    "datasets/",
    # Phase 4.8-F: pydantic-ai spike lives outside the install
    # surface and depends on a package we do NOT add to dev extras.
    # Excluded so the project gates stay green without pydantic-ai.
    "experiments/",
]

[[tool.mypy.overrides]]
module = "networkx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "oida_code._vendor.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "external_provider: Phase 4.4 optional smoke against a real LLM provider; skipped unless OIDA_RUN_EXTERNAL_PROVIDER_TESTS=1 AND the relevant API key env var is set.",
]

[tool.coverage.run]
branch = true
source = ["oida_code"]
omit = ["src/oida_code/_vendor/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
